fix overflow

--- a/app/assets/stylesheets/mixins/shiki_comment.sass
+++ b/app/assets/stylesheets/mixins/shiki_comment.sass
@@ -53,6 +53,8 @@ $comment_border: 1px dashed #ddd
           display: inline-block
 
     .body
+      overflow: hidden // do not remove. will cause bugs for overflowed content
+
       .ban
         .b-user16
           margin-right: 0
